--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^6.6.2",
     "body-parse": "^0.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
